--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,7 +13,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
-				<a href="" class="header__logo"><img src="{% static 'main/images/logo.svg' %}" alt="logo">
+				<a href="{% url 'main:index' %}" class="header__logo"><img src="{% static 'main/images/logo.svg' %}" alt="logo">
 				</a>
 				<nav class="header__menu menu">
 					<div class="menu__body">
