--- a/main/templates/main/analysis.html
+++ b/main/templates/main/analysis.html
@@ -33,7 +33,7 @@
 							</article>
 						</div>
 						<div class="advantages__image">
-							<img src="{% static 'main/images/advantages/image.jpg' %}" alt="image">
+							<img src="{% static 'news/images/01.jpg' %}" alt="image">
 						</div>
 					</div>
 				</section>
