--- a/main/templates/main/signupuser.html
+++ b/main/templates/main/signupuser.html
@@ -21,15 +21,20 @@
                                      {% else %}
 
                                       <p>You are not logged in</p>
-                                      <h1>Sign up</h1>
+                                      <br>
 
                                       {{ error }}
 
+
                                     <form method="POST">
                                         {% csrf_token %}
-                                    {{ form.as_p }}
-                                    <button type="submit">Sign up</button>
+                                        <table>
+                                    {{ form.as_table }}
+
+                                        </table>
+                                        <button type="submit">Sign up</button>
                                     </form>
+
                                      <br><br>
                                     <a href="{% url 'main:loginuser' %}">Login</a>
 
